<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.davidcs.poeablusa.LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <EditText
        android:layout_below="@+id/tvLogin"
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_login"/>
    <TextView
        android:layout_below="@+id/etLogin"
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <EditText
        android:layout_below="@+id/tvSenha"
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"/>
    <CheckBox
        android:layout_below="@+id/button"
        android:id="@+id/cbManter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manter_logado"/>

    <Button
        android:layout_below="@+id/etSenha"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logar"
        android:text="@string/logar"/>

</RelativeLayout>
